Added core support for multiple games

--- a/pacman/views/index.jade
+++ b/pacman/views/index.jade
@@ -1,4 +1,5 @@
 h1= title
 p Welcome to #{title}
-
+script(type="text/javascript")
+ var socket = io.connect(window.location.origin + "/#{game}");
 #pacman
