--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/socket.io/socket.io.js')
   body!= body
+  script(src='/javascripts/underscore-min.js')
   script(src='/javascripts/client.js')
   script(src='/javascripts/pacman.js')
